your message here

--- a/prompt_enhancer/settings.html
+++ b/prompt_enhancer/settings.html
@@ -269,6 +269,7 @@
                     <a href="index.html" class="text-gray-400 hover:text-white transition-colors">Enhancer</a>
                     <a href="examples.html" class="text-gray-400 hover:text-white transition-colors">Examples</a>
                     <a href="settings.html" class="text-amber-400 font-medium">Settings</a>
+                    <a href="pricing.html" class="text-gray-400 hover:text-white transition-colors">Monetize</a>
                 </div>
             </div>
         </div>
