--- a/prompt_enhancer/index.html
+++ b/prompt_enhancer/index.html
@@ -239,6 +239,7 @@
                     <a href="index.html" class="text-amber-400 font-medium">Enhancer</a>
                     <a href="examples.html" class="text-gray-400 hover:text-white transition-colors">Examples</a>
                     <a href="settings.html" class="text-gray-400 hover:text-white transition-colors">Settings</a>
+                    <a href="pricing.html" class="text-gray-400 hover:text-white transition-colors">Monetize</a>
                 </div>
             </div>
         </div>
